syntax = "proto3";

package message.v1;

import "google/protobuf/empty.proto";

option go_package = "proto/message/v1";

message Message {
  string uuid = 1;         
  string content = 2;    
  int64 timestamp = 3;   
}

message SendMessageRequest {
  string user_id = 1;
  string content = 2;    
}

message EditMessageRequest {
  string user_id = 1;
  string message_id = 2;
  string content = 3;    
}

message DeleteMessageRequest {
  string user_id = 1;
  string message_id = 2;
}

message MessageActionResponse {
  bool success = 1;
  string error = 2;      
}

message GetHistoryRequest {
  uint32 limit = 1;       
}

message GetHistoryResponse {
  repeated Message messages = 1;  
}


service MessageService {
  rpc SendMessage(SendMessageRequest) returns (MessageActionResponse);
  rpc EditMessage(EditMessageRequest) returns (MessageActionResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (MessageActionResponse);
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
  rpc StreamMessages(google.protobuf.Empty) returns (stream Message);
  rpc Ready(google.protobuf.Empty) returns (google.protobuf.Empty);
}
